# django-queryset-feeler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  pyproject.toml  runtests.py  setup.cfg
.github/workflows/: ci.yml
src/django_queryset_feeler/: __init__.py  exceptions.py  thing.py
src/django_queryset_feeler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: models.py  serializers.py  settings.py  test_feel.py  views.py
tests/templates/tests/: pizza_list.html
tests/templatetags/: test_tags.py
tests/test_project/: create_models.py  tests.py
tests/test_project/templates/: base.html
tests/test_project/test_app/: models.py  serializers.py  urls.py  views.py
tests/test_project/test_app/migrations/: 0001_initial.py  0002_rename_vegetation_topping_vegetarian.py
tests/test_project/test_app/templates/test_app/: pizza_list.html
tests/test_project/test_app/templatetags/: test_app_tags.py
tests/test_project/test_project/: settings.py  urls.py
