[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project]
name = "django-queryset-feeler"
version = "1.0.0"
description = "Tools for understanding how django querysets are executed."
authors = [{ name = "Lukas Schillinger", email = "lukas@schillingertools.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["django", "query", "queryset", "profiling", "orm"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Typing :: Typed",
]
dependencies = [
    "django>=4.2",
    "sqlparse>=0.4.2",
    "sql-metadata>=2.6.0",
    "pygments>=2.12.0",
]

[project.urls]
homepage = "https://github.com/lukas-schillinger/django-queryset-feeler"

[project.optional-dependencies]
ipython = ["ipython>=8.4.0"]

[dependency-groups]
dev = ["ruff>=0.11.0", "ty>=0.0.1"]
test = ["djangorestframework>=3.14"]
