[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project]
name = "django-queryset-feeler"
version = "1.0.0"
description = "Tools for understanding how django querysets are executed."
authors = [{ name = "Lukas Schillinger", email = "lukas@schillingertools.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["django", "query", "queryset", "profiling", "orm"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Typing :: Typed",
]
dependencies = [
    "django>=4.2",
    "sqlparse>=0.4.2",
    "sql-metadata>=2.6.0",
    "pygments>=2.12.0",
]

[project.urls]
homepage = "https://github.com/lukas-schillinger/django-queryset-feeler"

[project.optional-dependencies]
ipython = ["ipython>=8.4.0"]

[dependency-groups]
dev = ["ruff>=0.11.0", "ty>=0.0.1"]
test = ["djangorestframework>=3.14"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    # Core
    "E",      # pycodestyle errors
    "F",      # pyflakes (undefined names, unused imports)
    "W",      # pycodestyle warnings

    # Imports
    "I",      # isort (import sorting and grouping)
    "ICN",    # import-conventions (e.g. import numpy as np)
    "TC",     # type-checking (move typing-only imports behind TYPE_CHECKING)

    # Code quality
    "N",      # pep8-naming conventions
    "UP",     # pyupgrade (modernize syntax for target Python)
    "B",      # flake8-bugbear (common bug patterns, mutable defaults, etc.)
    "A",      # flake8-builtins (shadowing builtins like list, type, id)
    "C4",     # flake8-comprehensions (simplify list/dict/set comprehensions)
    "SIM",    # flake8-simplify (if/else simplification, context managers, etc.)
    "PIE",    # flake8-pie (misc simplifications)
    "RET",    # flake8-return (unnecessary else after return/break/continue)
    "RSE",    # flake8-raise (unnecessary parentheses on raised exceptions)
    "FLY",    # flynt (string concatenation -> f-strings)
    "PERF",   # perflint (performance anti-patterns)
    "FURB",   # refurb (additional modernization rules)

    # Django
    "DJ",     # flake8-django

    # Security
    "S",      # flake8-bandit (security: hardcoded passwords, SQL injection, etc.)

    # Error handling
    "TRY",    # tryceratops (exception handling anti-patterns)

    # Cleanup
    "ERA",    # eradicate (commented-out code)
    "ARG",    # flake8-unused-arguments
    "T20",    # flake8-print (print statements)

    # Type annotations
    "ANN",    # flake8-annotations (missing type annotations)

    # Docstrings
    "D",      # pydocstyle (docstring conventions)

    # Ruff's own
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line-too-long -- handled by formatter
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package (__init__)
    "D203",   # one-blank-line-before-class -- conflicts with D211
    "D213",   # multi-line-docstring-summary-second-line -- conflicts with D212
    "TRY003", # long exception messages -- too strict for a small library
    "S101",   # assert -- used for type narrowing after None checks
    "ANN401", # Any -- necessary for a library accepting arbitrary Django objects
    "D107",   # missing docstring in __init__ -- class docstring suffices
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = [
    "S101",   # assert is expected in tests
    "D",      # no docstring requirements in tests
    "ANN",    # no annotation requirements in tests
    "ARG",    # unused args fine in test setUp etc.
]
"runtests.py" = ["D", "ANN", "T20"]
"demo.py" = ["D", "ANN", "T20", "E402"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.10"
root = ["./src"]

[tool.ty.src]
exclude = ["tests/**"]

[[tool.ty.overrides]]
# pygments doesn't ship complete stubs; IPython is optional
include = ["src/django_queryset_feeler/__init__.py"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"
