[metadata]
name = django-queryset-feeler
version = 0.0.2
author = Lukas-Schillinger
author_email = lukas@schillingertools.com
description = tools to help understand how django querysets are executed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lukas-schillinger/django-queryset-feeler
project_urls =
    Bug Tracker = https://github.com/lukas-schillinger/django-queryset-feeler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src
